minor updates on this old project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="hello_guys_i_just_got_a_new_beast">Hello guys! I just got a new beast.</string>
+    <string name="fab">fab</string>
 </resources>
